[package]
name = "read-process-memory"
version = "0.1.3-pre"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
description = "Read memory from another process."
homepage = "https://github.com/luser/read-process-memory"
repository = "https://github.com/luser/read-process-memory"

[dependencies]
libc = "0.2.15"
log = "0.4.6"

[target.'cfg(target_os="macos")'.dependencies]
mach = "0.0.5"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[dev-dependencies]
docmatic = "0.1"
