[package]
name = "read-process-memory"
edition = "2021"
version = "0.2.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
description = "Read memory from another process."
homepage = "https://github.com/rbspy/read-process-memory"
repository = "https://github.com/rbspy/read-process-memory"
rust-version = "1.56"

[dependencies]
libc = "0.2"
log = "0.4"

[target.'cfg(target_os="macos")'.dependencies]
mach2 = "0.6.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
] }
